# mangowm-zebarwidget-crystaldock

./: .gitignore  EQUALIZER_AUDIO_INTEGRATION.md  README.md  TODOS.md  build-ocws-audio.sh  build-ocws-core.sh  build.zig  compose-fixes.sh  download-fltk-source.sh  download-mango.sh  install-dependencies.sh  install-distribution.sh  install-labwc-source.sh  install-zig.sh  install.sh  setup-wayland-env.sh  system-healthcheck.sh  test-waveform.qml  test.sh  test_compile.c  wayland-healthcheck.sh
.mimocode/: .cron-lock
.mimocode/plans/: 1784022626014-calm-harbor.md
components/widgets-system/: bandwidth  bandwidth.c
distro/: arch.sh  debian-sparky-lxqt.sh  debian.sh  fedora.sh  openmandriva.sh
dotfiles/: install.sh  wallpaper  wallpaper-sources.txt.backup
dotfiles/DankMaterialShell/: settings.json
dotfiles/contour/: contour.yml
dotfiles/crystal-dock/: appearance.conf
dotfiles/fontconfig/: fonts.conf
dotfiles/foot/: foot.ini
dotfiles/fuzzel/: fuzzel.ini
dotfiles/gtk/: gtk-base.css  gtk.css  gtk3-settings.ini  gtk4-settings.ini  tokens.css
dotfiles/gtk-4.0/: gtk.css
dotfiles/labwc/: autorun.conf  autostart  environment  menu.xml  rc.xml  themerc-override
dotfiles/labwc-widgets/: status.json
dotfiles/mako/: config
dotfiles/noctalia/: config.toml
dotfiles/nvim/: init.lua
dotfiles/ocws/: battery-text.widget  bluetooth.widget  cal.widget  clipboard.widget  clock.widget  disk.widget  media-player.widget  media.widget  network-bandwidth.widget  nightlight.widget  notification-center.widget  ocws-control-center.widget  ocws-daemon.sh  ocws-sysmon.source  ocws-theme.css  ocws-widget-directives  ocws.config  power-profile.widget  sfwbar-full.config  volume-text.widget  wifi-secret.widget  wifi.widget
dotfiles/qt6ct/: qt6ct.conf
dotfiles/rofi/: config.rasi
dotfiles/sfwbar/: battery-text.widget  bluetooth.widget  brightness.widget  catppuccin-mocha.css  cpu-text.widget  launcher.widget  media.widget  memory-text.widget  network-text.widget  theme.css  (+6 more)
example/: usage_guide.c
fltk-hybrid-panel/: CMakeLists.txt  README.md
fltk-hybrid-panel/src/: main.cpp  panel_widgets.cpp  panel_widgets.h  system_info.cpp  system_info.h  wayland_panel.cpp  wayland_panel.h
fltk-hybrid-panel/tests/: system_info_test.cpp
fltk-panel/: build.sh  layer-shell.h  panel.cpp  simple-panel.cpp  toplevel-dock.cpp  toplevel-dock.h  toplevel-tracker.h  wayland-layer-shell.h  wlr-foreign-toplevel-management-unstable-v1-client-protocol.c  wlr-foreign-toplevel-management-unstable-v1-client-protocol.h
scratch/: reconstruct.py
scripts/: actions.sh  autorun-manager.sh  debug-labwc.sh  dock-sync.py  dotfiles-sync.sh  fix-labwc-clicks.sh  fix.sh  font-scale.sh  increase-decrease-brightness.sh  install-contour.sh  install-dependencies.sh  install-deps.sh  install-elementary-icons.sh  install-fonts-cursors.sh  install-fonts.sh  install-noctalia-deps-sudo.sh  install-noctalia-deps.sh  install-noctalia.sh  install-screenshot-tools.sh  keybind-presets.sh  keybinds.sh  labwc-shell-wrapper  ocws-check-requirements.sh  ocws-configure.sh  ocws-deps.sh  ocws-fetch-art.sh  ocws-health.sh  ocws-media-art.sh  ocws-media-widget-updater.sh  ocws-network-bandwidth.sh  ocws-plugin-loader.sh  ocws-state.sh  ocws-validate-session.sh  playerctl.sh  reconfigure.sh  relaunch-status-bars.sh  reset.sh  restart-fltk-panel  restart-zigshell  shell-switcher.sh  (+8 more)
src/: ocws-clip.c  ocws-lock.c  ocws-shot.c  ocws-sysmon.c
templates/: crystal-dock-appearance.conf.tmpl  dms-settings.json.tmpl  environment.tmpl  firefox-userChrome.css.tmpl  foot.ini.tmpl  fuzzel.ini.tmpl  gtk.css.tmpl  gtk2-rc.tmpl  gtk3-settings.ini.tmpl  gtk4-settings.ini.tmpl  mako.ini.tmpl  noctalia.toml.tmpl  nvim.lua.tmpl  ocws.css.tmpl  qt6ct.conf.tmpl  rofi.rasi.tmpl  sfwbar.css.tmpl  spicetify.ini.tmpl  themerc-override.tmpl  tmux.conf.tmpl  tokens.css.tmpl  vencord.css.tmpl  zebar.css.tmpl
tests/: run-all-tests.sh  run-fltk-panel-tests.sh  test-fltk-panel.sh
themes/: catppuccin-mocha.ini  dracula.ini  everforest.ini  flexoki.ini  gruvbox.ini  kanagawa.ini  nord.ini  one-dark.ini  rose-pine.ini  solarized-dark.ini  tokyo-night.ini  wallpaper-auto.ini
www/: mkdocs.yml
(+151 files in other folders)
